# ToyC

./: CMakeLists.txt  Makefile  README.md
build-cmake/: Makefile  toyc
docs/: practice_report.md
scripts/: bench.sh  build.sh  diff_test.sh  fuzz.py  install_deps_debian.sh  perf_report.sh  run_one.sh  test.sh
src/: ast.cpp  ast.h  codegen_riscv32.cpp  codegen_riscv32.h  ir.cpp  ir.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  sema.cpp  sema.h  symbol_table.cpp  symbol_table.h  token.h  utils.cpp  utils.h
tests/: bench_big_loop.tc  bench_const_dense.tc  bench_control_flow.tc  bench_cse.tc  bench_many_calls.tc  bench_many_locals.tc  bench_recursion.tc  bench_short_circuit.tc  break_continue.tc  break_nearest.tc  call_as_arg.tc  const_fold.tc  const_if.tc  continue_nearest.tc  dangling_else.tc  expected.tsv  expr_precedence.tc  fib_recursion.tc  function_call.tc  global_const_prop2.tc  global_const_var.tc  global_rw2.tc  if_both_return.tc  if_else.tc  local_const_prop2.tc  local_const_var.tc  logic_short_circuit.tc  many_args.tc  many_locals.tc  many_temporaries.tc  modulo.tc  negative_unary.tc  nested_if_else.tc  nested_while.tc  param_shadow.tc  perf_loop.tc  recursion.tc  relation.tc  return_dead.tc  scope_deep_shadow.tc  (+7 more)
